k8s/sender/deployment.yaml
#@ load("@ytt:data", "data")
apiVersion: apps/v1 #! for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: pos-sender
  annotations:
    traffic.sidecar.istio.io/excludeOutboundPorts: "5678,5433"
spec:
  selector:
    matchLabels:
      app: pos-sender
  replicas: 3 #! tells deployment to run 3 pods matching the template
  template: #! create pods using pod definition in this template
    metadata:
      labels:
        app: pos-sender
    spec:
      containers:
      - name: sender
        image: #@ data.values.image
        ports:
        - containerPort: 8080
          name: server
        - containerPort: 8081
          name: management
      imagePullSecrets:
      - name: harbor-regcred
