k8s/sender/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pos-sender-service
spec:
  ports:
    - port: 8090
      targetPort: 8080
      name: http
    - port: 8091
      targetPort: 8081
      name: management
  selector:
    app: pos-sender
  type: ClusterIP
