k8s/sender/rabbitmq-egress-destinationrule.yml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: external-rabbitmq
spec:
  host: "*.database.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: DISABLE
