k8s/sender/sender-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pos-sender-service
spec:
  hosts:
  - "pos-sender.services.edge.wrightcode.io"
  gateways:
  - pos-sender-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: pos-sender-service
        port:
          number: 8090
